--- a/poc/package.json
+++ b/poc/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "dependencies": {
     "@fireblocks/ts-sdk": "latest",
+    "@noble/curves": "^1.6.0",
+    "@noble/hashes": "^1.5.0",
     "seismic-viem": "1.1.0",
     "viem": "^2.21.0"
   }
